# RobotArmLocalization

./: .gitignore  README.md  run2.py  setup.cfg  setup.py
cocotest/: ClawDataset.py  PennFudanDataset.py  README.md  sample_pack.py  tv-training-code.py
src/: README.md  setup.py
src/RobotArmLocalizationPackage/: DetectedObject.py  Localizer.py  ObjectDetector.py  Rotation.py  Vector.py  __init__.py  calculate_base_diameter.py  full_requirements.txt  main.py  outlier.py  requirements.txt  rotation.pkl  rotation_demo.py  run.py  test_run_script.py  thomas_demo.py
src/RobotArmLocalizationPackage/Utilities/: utils.py  visualizer.py
src/TrainingSrc/: HowToTrainTheModel.md  How_to_make_masks.md  README.md  READMESINGH.md  clawObjectModel.py  engine.py  mask_test.py  model-training-code.py  run_model_with_image.py  run_with.txt  sample_pack.py  tv-training-code.py
src/TrainingSrc/Utilities/: ClawObjectDataset.py  clawObjectModel.py  coco_eval.py  coco_utils.py  custom_utils.py  engine.py  presets.py  train.py
src/arm_localizer/: README.md  __init__.py  arm_localizer.py  detected_object.py  localizer.py  object_detector.py  outlier.py  requirements.txt  requirements_sample.txt  rotation.py  run.py  run2.py  run3.py  vector.py
src/arm_localizer/demo_scripts/: demo_calibration.py  demo_center_of_mass.py  demo_localizer.py  demo_model.py  demo_object_detector.py  demo_rs2_deprojection.py  demo_threshold.py  demo_visualizer.py  new_rotation_demo.py  outlier.py  rotation_demo.py  run.py  run2.py  run_all.py
src/arm_localizer/examples/: abram_demo.py  demo_calibration.py  (+3 more)
(+27 files in other folders)
