[metadata]
name = RobotArmLocalizationPackage
version = 0.0.4
description = Robot Arm and Object Localization
long_description = long_description
long_description_content_type = text: markdown
url = https://github.com/KrickLogan/RobotArmLocalization
author = SE490 Fall, SE491 Spring 2021-22 SCSU Capstone John Deere Team

[options]
package_dir=
    =src
packages=find:
python_requires = >= 3.6

    # list dependencies here

[options.packages.find]
where=src